tests/compError/generic_error.ucl
// compError
// error: expected type Generic(builtin:String), but got type Generic(builtin:Number)
// tests/compError/generic_error.ucl:10 -> expected type defined here
// tests/compError/generic_error.ucl:11 -> actual type from here

Generic = fn(type: Type) -> Type {
	struct() {}
}

function = fn() -> Generic(String) {
	Generic(Number) {}
}